--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@headlessui/react": "^1.2.0",
     "next": "10.0.9",
     "postcss-import": "^14.0.0",
     "react": "17.0.1",
