--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.2.0",
+    "@heroicons/react": "^1.0.1",
     "next": "10.0.9",
     "postcss-import": "^14.0.0",
     "react": "17.0.1",
