--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "deploy": "gh-pages -d build -t true"
   },
+  "homepage": "https://do1fendi.github.io/tbdamai/",
   "dependencies": {
     "@headlessui/react": "^1.2.0",
     "@heroicons/react": "^1.0.1",
+    "gh-pages": "^3.2.2",
     "next": "10.0.9",
     "postcss-import": "^14.0.0",
     "react": "17.0.1",
