--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "gh-pages": "^3.2.2",
     "next": "10.0.9",
     "postcss-import": "^14.0.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react": "16.14.0",
+    "react-dom": "16.14.0",
+    "react-messenger-customer-chat": "^0.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
