--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss-import": "^14.0.0",
     "react": "16.14.0",
     "react-dom": "16.14.0",
+    "react-facebook-login": "^4.1.1",
     "react-messenger-customer-chat": "^0.8.0"
   },
   "devDependencies": {
