--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "react-facebook-login": "^4.1.1",
-    "react-messenger-customer-chat": "^0.8.0"
+    "react-messenger-customer-chat": "^0.8.0",
+    "swr": "^0.5.6"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
